--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "build": "webpack"
   },
   "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-stage-1": "^6.24.1",
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.4.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "webpack-dev-server": "^2.4.5"
   }
 }
